fix: remove showVideo(false) in tracking mode to enable gaze predictions
WebGazer requires an active camera feed to produce gaze predictions. When
showVideo(false) is called immediately after webgazer.begin() in a fresh
iframe (tracking mode), it stops the camera feed before predictions can start.

Debug logs showed:
- Gaze callback fires ONCE with data: null
- No subsequent callbacks (predictions never start)
- Result: zero gaze data collected

Solution: Remove showVideo(false) calls in tracking mode. The iframe is
already invisible (1px × 1px, visibility:hidden, z-index:-1), so hiding
the video element provides no visual benefit and breaks functionality.

Note: showVideo(false) remains in calibration mode where it works correctly
because predictions are already active before video is hidden.

Expected result: Continuous gaze callbacks with real prediction data.

--- a/experiments/calibration.html
+++ b/experiments/calibration.html
@@ -303,10 +303,8 @@
       webgazer.begin().then(function() {
         console.log('[Calibration] WebGazer initialized successfully');
 
-        // Hide video elements (tracking works even when hidden)
-        webgazer.showVideo(false);
-        webgazer.showFaceOverlay(false);
-        webgazer.showFaceFeedbackBox(false);
+        // DON'T hide video in tracking mode - camera feed must be active for predictions
+        // (iframe is already invisible at 1px × 1px with visibility:hidden)
 
         // Set up gaze listener for continuous streaming
         var gazeCallbackCount = 0;
