fix: increase delay before setting gaze listener to avoid jsPsych cleanup race
jsPsych's WebGazer extension was removing our gaze listener during cleanup,
causing 0 callbacks despite WebGazer being active and predictions working.

Solution: Delay initTrackingMode from 100ms to 2000ms to let jsPsych fully
clean up before we set our own listener.

Root cause identified by diagnostic logs:
- getCurrentPrediction() works (WebGazer active)
- isTracking set correctly
- But gaze callbacks: 0 (listener was removed)

This should allow the listener to survive jsPsych cleanup.

--- a/experiments/calibration.html
+++ b/experiments/calibration.html
@@ -81,9 +81,12 @@
           console.log('Sent calibration data to parent window');
 
           // Switch to tracking mode after sending calibration-complete
+          // IMPORTANT: Wait 2s for jsPsych WebGazer extension to fully clean up
+          // before setting our own gaze listener
           setTimeout(function() {
+            console.log('[Calibration] jsPsych cleanup complete, initializing tracking mode...');
             initTrackingMode(model_key);
-          }, 100);
+          }, 2000);
         } else {
           // Standalone mode - display results
           console.log('Calibration complete!');
